Text posting to state from JSON

--- a/client/src/pages/Game/style.css
+++ b/client/src/pages/Game/style.css
@@ -19,7 +19,7 @@
    box-shadow: 0 0 10px 2px;
  }
 
- /* .btn-grid {
+ /* .btnGrid {
     display: grid;
     grid-template-columns: repeat(2, auto);
     gap: 10px;
