--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,33 @@
+.btnShake {
+background-color: #111111;
+color: #ffffff;
+border-color: #111111;
+border-radius: 8px;
+}
+
+.btnShake:hover {
+  /* Start the shake animation and make the animation last for 0.5 seconds */
+  animation: shake 1.25s;
+
+  /* When the animation is finished, start again */
+  animation-iteration-count: infinite;
+}
+
+@keyframes shake {
+  0% { transform: translate(1px, 1px) rotate(0deg); }
+  10% { transform: translate(-1px, -2px) rotate(-1deg); }
+  20% { transform: translate(-3px, 0px) rotate(1deg); }
+  30% { transform: translate(3px, 2px) rotate(0deg); }
+  40% { transform: translate(1px, -1px) rotate(1deg); }
+  50% { transform: translate(-1px, 2px) rotate(-1deg); }
+  60% { transform: translate(-3px, 1px) rotate(0deg); }
+  70% { transform: translate(3px, 1px) rotate(-1deg); }
+  80% { transform: translate(-1px, -1px) rotate(1deg); }
+  90% { transform: translate(1px, 2px) rotate(0deg); }
+  100% { transform: translate(1px, -2px) rotate(-1deg); }
+}
+  
+
 .App {
   text-align: center;
 }
