--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,7 +5,22 @@ border-color: #111111;
 border-radius: 8px;
 }
 
+.btnShaken {
+  background-color: #111111;
+  color: purple;
+  border-color: #111111;
+  border-radius: 10px;
+  }
+
 .btnShake:hover {
+  /* Start the shake animation and make the animation last for 0.5 seconds */
+  animation: shake 1.25s;
+
+  /* When the animation is finished, start again */
+  animation-iteration-count: infinite;
+}
+
+.btnShaken:hover {
   /* Start the shake animation and make the animation last for 0.5 seconds */
   animation: shake 1.25s;
 
