--- a/client/src/App.css
+++ b/client/src/App.css
@@ -44,6 +44,7 @@ border-radius: 8px;
   
 .App {
   text-align: center;
+  background-color: #111111;
 }
 
 .App-logo {
@@ -78,6 +79,27 @@ border-radius: 8px;
 
 #nav-container {
   align-items: flex-end;
+}
+
+#form-horizontal{
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 40%;
+}
+
+
+.wrap-login100 {
+  margin: auto;
+  width: 680px;
+  background: #666;
+  position: center;
+  color:white;
+  text-align: center;
+
+}
+.form-label{
+align-content: inherit;
+left: 20px;
 }
 /* 
 @keyframes App-logo-spin {
@@ -168,12 +190,14 @@ border-radius: 8px;
         
           body, html {
             overflow: hidden;
+            background-color: #111111;
           }
         
           body {
             font: 100% / 1.5 Arial;
+            font-family: Arial, Helvetica, sans-serif;
           }
-        
+      
           * {
             margin:0;
             padding:0;
@@ -206,8 +230,6 @@ border-radius: 8px;
             z-index: 2; /* slide over group 2 */
             /* content:url(https://i.ibb.co/XxYV7pB/picturebackground2.jpg); */
             /* align-content: center; */
-
-
           }
           #group1 .parallax__layer--base {
             background:#111111;
@@ -228,9 +250,9 @@ border-radius: 8px;
           #group3 .parallax__layer--base {
             background: #111111;
           }
-          #auto{
-            /* color: white; */
-          }
+          /* #auto{
+            color: white;
+          } */
           #group4 {
             z-index: 2; /* slide under group 3 and 5 */
             color: white;
