--- a/client/src/App.css
+++ b/client/src/App.css
@@ -95,12 +95,69 @@ border-radius: 8px;
   position: center;
   color:white;
   text-align: center;
+  border-radius: 10px;
 
 }
 .form-label{
 align-content: inherit;
 left: 20px;
 }
+ul {
+  display: inline-grid;
+  grid-auto-flow: row;
+  grid-gap: 24px;
+  justify-items: center;
+  margin: auto;
+}
+
+@media (min-width: 500px) {
+  ul {
+    grid-auto-flow: column;
+    color: white;
+  }
+}
+
+a {
+  color: white;
+  text-decoration: none;
+  box-shadow: inset 0 -1px 0 hsla(0, 0%, 100%, 0.4);
+}
+
+a:hover {
+  box-shadow: inset 0 -1.2em 0 hsla(0, 0%, 100%, 0.4);
+}
+
+li:last-child {
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+  color: white;
+}
+
+li:hover ~ li p {
+  animation: wave-animation 0.3s infinite;
+}
+
+/* below is just for demo styling */
+
+div {
+ 
+  line-height: 1.0;
+  font-family: Menlo, monospace;
+}
+
+@keyframes wave-animation {
+  0%,
+  100% {
+    transform: rotate(0deg);
+  }
+  25% {
+    transform: rotate(20deg);
+  }
+  75% {
+    transform: rotate(-15deg);
+  }
+}
+
 /* 
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
@@ -286,7 +343,9 @@ left: 20px;
             align-content: center;
           }
           #group7 .parallax__layer--base {
-            background: thistle;
+            background: rgb(56, 44, 110);
+            font-size: 25px;
+            color: white;
           }
           
         
