--- a/client/src/pages/Endgame/style.css
+++ b/client/src/pages/Endgame/style.css
@@ -1,39 +1,26 @@
- /* body {
-    padding: 0;
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100vw;
-    height: 100vh;
-    background-color: #333;
-  }
-   */
+ .cenPi {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 30%;   
+ }
 
  .container {
-  width: 500px;
+   width: 500px;
    max-width: 50%;
    background-color: #f2f2f2;
    padding: 10px;
    border-radius: 10px;
    box-shadow: 0 0 10px 2px;
    grid-template-columns: repeat(2, auto);
-
  }
 
  .text {
-  font-family: 'Corben', cursive;
+   font-family: 'Corben', cursive;
  }
 
- /* .btnGrid {
-    display: grid;
-    grid-template-columns: repeat(2, auto);
-    gap: 10px;
-    margin-top: 20px;
-  } */
-
  .btn {
-  font-family: 'Josefin Sans', sans-serif;
+   font-family: 'Josefin Sans', sans-serif;
    border-radius: 10px;
    padding: 5px 10px;
    color: white;
@@ -42,5 +29,5 @@
  }
 
  .btn:hover {
-   color:#000080;
+   color: #000080;
  }
