--- a/client/src/pages/Endgame/style.css
+++ b/client/src/pages/Endgame/style.css
@@ -1,3 +1,6 @@
+ *{
+   color: white;
+ }
  .cenPi {
   display: block;
   margin-left: auto;
@@ -30,4 +33,8 @@
 
  .btn:hover {
    color: #000080;
+ }
+ .btnShaken2{
+   background-color: white;
+   color: black;
  }
