--- a/client/src/App.css
+++ b/client/src/App.css
@@ -140,11 +140,11 @@ ul {
 a {
   color: white;
   text-decoration: none;
-  box-shadow: inset 0 -1px 0 hsla(0, 0%, 100%, 0.4);
+  /* box-shadow: inset 0 -1px 0 hsla(0, 0%, 100%, 0.4); */
 }
 
 a:hover {
-  box-shadow: inset 0 -1.2em 0 hsla(0, 0%, 100%, 0.4);
+  /* box-shadow: inset 0 -1.2em 0 hsla(0, 0%, 100%, 0.4); */
 }
 
 li:last-child {
@@ -165,7 +165,7 @@ div {
 }
 
 @keyframes wave-animation {
-  0%, 100% {
+  /* 0%, 100% {
     transform: rotate(0deg);
   }
   25% {
@@ -174,6 +174,9 @@ div {
   75% {
     transform: rotate(-15deg);
   }
+  100% {
+    transform: rotate(-15deg);
+  } */
 }
 
 /* 
