charts working, had to mess with some css

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -110,7 +110,7 @@
 .wrap-login100 {
   margin: auto;
   width: 680px;
-  background: #666;
+  background: "#111111";
   position: center;
   color: white;
   text-align: center;
