--- a/client/src/pages/Endgame/style.css
+++ b/client/src/pages/Endgame/style.css
@@ -1,11 +1,12 @@
- *{
+ /* *{
    color: white;
- }
+ } */
  .cenPi {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 30%;   
+  width: 30%;  
+  color: black !important
  }
 
  .container {
